--- a/src/app/vistas/home/home.component.html
+++ b/src/app/vistas/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="d-flex justify-content-between">
         <div>
             <a routerLink="/home">
-                <img src="https://angular.io/assets/images/logos/angular/angular.png" alt="Angular logo" width="200">
+                <img src="assets/img/Alk.jpg" alt="Angular logo" width="200">
             </a>
         </div>
         <div class="icons">
