intento de mejorar el menú de ropa, gorras y accesorios

--- a/src/app/vistas/home/home.component.html
+++ b/src/app/vistas/home/home.component.html
@@ -25,18 +25,19 @@
         </div>
     </div>
     <nav>
-        <ul class="nav nav-underline">
-            <li class="nav-item">
-                <a routerLink="/ropa" class="nav-link">ROPA</a>
-            </li>
-            <li class="nav-item">
-                <a routerLink="/gorras" class="nav-link">GORRAS</a>
-            </li>
-            <li class="nav-item">
-                <a routerLink="/accesorios" class="nav-link">ACCESORIOS</a>
-            </li>
-        </ul>
-    </nav>
+                <ul class="nav nav-underline">
+                    <li class="nav-item">
+                      <a class="nav-link" href="Ropa.html">ROPA</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="Gorras.html">GORRAS</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="Accesorios.html">ACCESORIOS</a>
+                    </li>
+                  </ul>
+            </nav>
+
 </header>
 
 <main>
