--- a/src/app/vistas/ropa/ropa.component.html
+++ b/src/app/vistas/ropa/ropa.component.html
@@ -1,81 +1,221 @@
-<header>
-  <div class="d-flex justify-content-between align-items-center p-2">
-    <a routerLink="/home">
-      <img src="assets/img/Alk.jpg" alt="Logo Alkapone" width="200" height="100" />
-    </a>
-    <div class="icons d-flex gap-3 align-items-center">
-      <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-search color" viewBox="0 0 15 15">
-        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
-      </svg>
-      <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-person color" viewBox="0 0 15 15">
-        <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z" />
-      </svg>
-      <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-bag color" viewBox="0 0 15 15">
-        <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z" />
-      </svg>
-    </div>
-  </div>
-</header>
+<!DOCTYPE html>
+<html lang="es">
 
-<main>
-  <div class="row text-center p-3 bg-light mb-3">
-    <h2 class="fs-5 m-0 fw-bold">HOMBRE ({{ allProducts.length }})</h2>
-  </div>
-  <div>
-    <h4 class="filter fs-6 mb-0 py-3 d-flex justify-content-center align-items-center gap-2">
-      ORGANIZAR: MÁS RECIENTE
-      <img src="assets/img/filter.png" alt="Filtro" width="15" height="15" />
-    </h4>
-  </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ROPA - HOMBRE</title>
 
-  <section class="products-section">
-    <div class="products-grid row">
-      <div class="product col-md-3 mb-4" *ngFor="let product of displayedProducts">
-        <img class="img-center w-100" [src]="product.imgSrc" [alt]="product.alt" />
-        <div class="d-flex justify-content-between px-3 py-3 align-items-center">
-          <div>
-            <h3 class="fw-bold fs-6 mb-0">{{ product.title }}</h3>
-            <p class="mb-0">{{ product.price }}</p>
-          </div>
-          <div class="d-flex-center" (click)="toggleLike(product)" style="cursor:pointer;">
-            <svg *ngIf="!product.liked" class="heart-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" viewBox="0 0 16 16">
-              <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-            </svg>
-            <svg *ngIf="product.liked" class="heart-icon liked" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="red" viewBox="0 0 16 16">
-              <path d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
-            </svg>
-          </div>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+</head>
+
+<body>
+    <header>
+        <div class="d-flex justify-content-between">
+            <div>
+                <a href="/home">
+                    <img src="assets/img/Alk.jpg" alt="" width="180" height="110">
+                </a>
+            </div>
+            <div class="icons">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                    class="bi bi-search color" viewBox="0 0 15 15">
+                    <path
+                        d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
+                    class="bi bi-person color" viewBox="0 0 15 15">
+                    <path
+                        d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                    class="bi bi-bag color" viewBox="0 0 15 15">
+                    <path
+                        d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z" />
+                </svg>
+            </div>
         </div>
-      </div>
-    </div>
+        <div>
+            <nav>
+                <ul class="nav nav-underline">
+                    <li class="nav-item">
+                      <a class="nav-link active" href="/ropa">ROPA</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/gorras">GORRAS</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/accesorios">ACCESORIOS</a>
+                    </li>
+                  </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div class="row text-center p-3 bg-light">
+            <h2 class="position-abs fs-5">(32)</h2>
+            <h2 class="m-0 fw-bold fs-5">HOMBRE</h2>
+        </div>
+        <div>
+            <h4 class="filter fs-6 mb-0 py-5">ORGANIZAR: MÁS RECIENTE <img src="assets/img/filter.png" alt="" width="15" height="15"></h4>
+        </div>
+        <section class="products-section">
+            <div id="products-list" class="products-grid row">
+                <div class="product col-md-3">
+                    <img class="img-center" src="assets/img/camisa1.png" alt="Reloj Q&Q Blanco">
+                    <div class="d-flex justify-content-between px-3 py-4">
+                        <div>
+                            <h3 class="fw-bold fs-6 mb-0">CAMISA TIPO POLO ALGODÓN</h3>
+                            <p class="mb-0">$200.000</p>
+                        </div>
+                        <div class="d-flex-center">
+                            <svg class="heart-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                                class="bi bi-heart" viewBox="0 0 16 16">
+                                <path id="heart-path"
+                                    d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+                
+                
+                <div class="product col-md-3">
+                    <img class="img-center" src="assets/img/camisa2.png" alt="Reloj Casio Negro">
+                    <div class="d-flex justify-content-between px-3 py-4">
+                        <div>
+                            <h3 class="fw-bold fs-6 mb-0">CAMISETA DE ALGODÓN</h3>
+                            <p class="mb-0">$350.000</p>
+                        </div>
+                        <div class="d-flex-center">
+                            <svg class="heart-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                                class="bi bi-heart" viewBox="0 0 16 16">
+                                <path
+                                    d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+                <div class="product col-md-3">
+                    <img class="img-center" src="assets/img/camisa3.png" alt="Reloj Q&Q Azul">
+                    <div class="d-flex justify-content-between px-3 py-4">
+                        <div>
+                            <h3 class="fw-bold fs-6 mb-0">CONJUNTO AMIRI COLLECTION</h3>
+                            <p class="mb-0">$360.000</p>
+                        </div>
+                        <div class="d-flex-center">
+                            <svg class="heart-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                              </svg>
+                        </div>
+                    </div>
+                </div>
+                <div class="product col-md-3">
+                    <img class="img-center" src="assets/img/camisa4.png" alt="Reloj Q&Q Azul">
+                    <div class="d-flex justify-content-between px-3 py-4">
+                        <div>
+                            <h3 class="fw-bold fs-6 mb-0">CAMISETA DE ALGODÓN</h3>
+                            <p class="mb-0">$200.000</p>
+                        </div>
+                        <div class="d-flex-center">
+                            <svg class="heart-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                                class="bi bi-heart" viewBox="0 0 16 16">
+                                <path
+                                    d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+                <div class="product col-md-3">
+                    <img class="img-center" src="assets/img/camisa2.png" alt="Reloj Q&Q Blanco">
+                    <div class="d-flex justify-content-between px-3 py-4">
+                        <div>
+                            <h3 class="fw-bold fs-6 mb-0">RELOJ CASIO NEGRO</h3>
+                            <p class="mb-0">$200.000</p>
+                        </div>
+                        <div class="d-flex-center">
+                            <svg class="heart-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                              </svg>
+                        </div>
+                    </div>
+                </div>
+                <div class="product col-md-3">
+                    <img class="img-center" src="assets/img/camisa3.png" alt="Reloj Casio Negro">
+                    <div class="d-flex justify-content-between px-3 py-4">
+                        <div>
+                            <h3 class="fw-bold fs-6 mb-0">RELOJ Q&Q BLANCO</h3>
+                            <p class="mb-0">$350.000</p>
+                        </div>
+                        <div class="d-flex-center">
+                            <svg class="heart-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                                class="bi bi-heart" viewBox="0 0 16 16">
+                                <path
+                                    d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="py-4 text-center">
+                <button id="load-more-btn" class="btn btn-dark mb-4">Ver más</button>
+            </div>
+        </section>
+    </main>
 
-    <div class="text-center mt-4">
-      <button
-        class="btn btn-outline-dark fs-6 rounded-0 px-5"
-        *ngIf="canLoadMore()"
-        (click)="loadMore()"
-        aria-label="Ver más productos"
-      >
-        VER MÁS
-      </button>
-    </div>
-  </section>
-</main>
-<footer>
-  <div class="footer-background">
-    <p>Términos legales Copyright.</p>
-    <div>
-      <div class="social-media">
-        <a href="https://www.instagram.com/alkapone.st0re_222/profilecard/?igsh=cW1wZ3ZlYWswNmF2" target="_blank" rel="noopener noreferrer">
-          <img src="assets/img/instagram.png" alt="Instagram" />
-        </a>
-        <a href="https://wa.me/573187800480" target="_blank" rel="noopener noreferrer">
-          <img src="assets/img/whatsapp.png" alt="WhatsApp" />
-        </a>
-        <a href="https://www.tiktok.com/@alkapone_store?_t=8r3w26fyxdu&_r=1" target="_blank" rel="noopener noreferrer">
-          <img src="assets/img/tik-tok.png" alt="TikTok" />
-        </a>
-      </div>
-    </div>
-  </div>
-</footer>
+    <footer>
+        <div class="footer-background">
+            <p>Términos legales Copyright.</p>
+            <div>
+                <div class="social-media">
+                    <a href="https://www.instagram.com/alkapone.st0re_222/profilecard/?igsh=cW1wZ3ZlYWswNmF2"><img src="assets/img/instagram.png" alt="Instagram"></a>
+                    <a href="https://wa.me/573187800480"><img src="assets/img/whatsapp.png" alt="WhatsApp"></a>
+                    <a href="https://www.tiktok.com/@alkapone_store?_t=8r3w26fyxdu&_r=1"><img src="assets/img/tik-tok.png" alt="TikTok"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+</body>
+
+<script>
+document.getElementById("load-more-btn").addEventListener("click", function() {
+    const productsList = document.getElementById("products-list");
+    const products = Array.from(productsList.children); // Array de productos actuales
+    const currentProductCount = products.length; // Cuenta los productos actuales
+    
+    // Solo duplicar si hay menos de 11 productos
+    if (currentProductCount < 32) {
+        // Calcular cuántos productos faltan para llegar a 11
+        const productsToAdd = 32 - currentProductCount;
+
+        // Define cuántas veces quieres duplicar los productos actuales
+        const duplicateCount = 1; // Duplicar según los que falten
+
+        for (let i = 0; i < duplicateCount; i++) {
+            products.forEach(product => {
+                const productClone = product.cloneNode(true); // Clona el producto actual
+                productsList.appendChild(productClone); // Agrega el clon al contenedor
+            });
+        }
+    }
+});
+
+document.querySelectorAll(".heart-icon").forEach(function(icon) {
+    icon.addEventListener("click", function() {
+        const heartPath = this.querySelector("path");
+        // Path para el corazón lleno
+        const filledHeartPath = "M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.735 3.562-3.248 8 1.314z";
+        // Path para el corazón vacío
+        const emptyHeartPath = "m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15";
+        
+        // Alterna entre corazón lleno y vacío
+        heartPath.setAttribute("d", heartPath.getAttribute("d") === emptyHeartPath ? filledHeartPath : emptyHeartPath);
+    });
+});
+
+
+</script>
+</html>
+
