CAMBIOS EN EL HOME

--- a/src/app/vistas/home/home.component.html
+++ b/src/app/vistas/home/home.component.html
@@ -102,10 +102,10 @@
                             <img src="assets/img/reloj1.png" class="card-img-top" alt="Michael Kors">
                         </div>
                         <div class="card-body text-center">
-                            <h5 class="card-title">MICHAEL KORS</h5>
-                            <p>Tenis Michael Kors colección dama.</p>
-                            <p class="fw-bold">$200.000</p>
-                            <a href="#" class="btn btn-outline-dark">Ver más</a>
+                            <h5 class="card-title">TECHNOMARINE</h5>
+                            <p>Reloj technomarine dama.</p>
+                            <p class="fw-bold">$500.000</p>
+                            <a href="/home" class="btn btn-outline-dark">Ver más</a>
                         </div>
                     </div>
                 </div>
@@ -117,10 +117,10 @@
                             <img src="assets/img/reloj2.png" class="card-img-top" alt="Keith Haring">
                         </div>
                         <div class="card-body text-center">
-                            <h5 class="card-title">KEITH HARING</h5>
-                            <p>Gorra colección Keith Haring.</p>
-                            <p class="fw-bold">$210.000</p>
-                            <a href="#" class="btn btn-outline-dark">Ver más</a>
+                            <h5 class="card-title">TECHNOMARINE</h5>
+                            <p>Reloj technomarine blanco hombre.</p>
+                            <p class="fw-bold">$520.000</p>
+                            <a href="/home" class="btn btn-outline-dark">Ver más</a>
                         </div>
                     </div>
                 </div>
@@ -132,10 +132,10 @@
                             <img src="assets/img/reloj3.png" class="card-img-top" alt="Motosport">
                         </div>
                         <div class="card-body text-center">
-                            <h5 class="card-title">MOTOSPORT</h5>
-                            <p>Conjunto moto sport para hombre.</p>
-                            <p class="fw-bold">$250.000</p>
-                            <a href="#" class="btn btn-outline-dark">Ver más</a>
+                            <h5 class="card-title">TECHNOMARINE</h5>
+                            <p>Reloj technomarine azul hombre.</p>
+                            <p class="fw-bold">$650.000</p>
+                            <a href="/home" class="btn btn-outline-dark">Ver más</a>
                         </div>
                     </div>
                 </div>
