--- a/src/app/product/listarproduct/listarproduct.component.html
+++ b/src/app/product/listarproduct/listarproduct.component.html
@@ -65,7 +65,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let pd of VectorProduct">
-          <th scope="row">{{pd.id}}</th>
+          <th scope="row">{{pd.idProducto}}</th>
           <td>{{pd.nombre}}</td>
           <td>{{pd.descripcion}}</td>
           <td>{{ pd.precio | number:'1.0-0' }}</td>
