agregación de metodos get,add,update,delete en product.service. configuración de llamada a la api put y delete en listarproduct.component.ts. implementación del método ngOnChanges y mejoramiento de la estructura listarproduct.html

--- a/src/app/product/cu-product/cu-product.component.html
+++ b/src/app/product/cu-product/cu-product.component.html
@@ -1,7 +1,7 @@
 <form #form="ngForm">
   <div class="mb-3">
-    <label for="nombre" class="form-label">Nombre</label>
-    <input *ngIf="product" type="text" class="form-control" id="nombre" name="nombre"
+    <label for="Nombre" class="form-label">Nombre</label>
+    <input *ngIf="product" type="text" class="form-control" id="Nombre" name="nombre"
       placeholder="Ingrese el nombre del producto" [(ngModel)]="product.nombre">
   </div>
 
