--- a/src/app/product/listarproduct/listarproduct.component.html
+++ b/src/app/product/listarproduct/listarproduct.component.html
@@ -37,58 +37,59 @@
       </form>
     </div>
   </nav>
+<!-- Botón para nuevo producto -->
 <div class="row justify-content-end">
   <div class="col-lg-1 col-12" style="padding-left: 2.25rem;">
-    <button class="btn btn-success"  data-bs-toggle="modal" data-bs-target="#modalproduct" (click)="NuevoPoducto()">
+    <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalproduct" (click)="NuevoPoducto()">
       Nuevo
     </button>
   </div>
 </div>
 
+<!-- Spinner de carga -->
 <div class="d-flex justify-content-center" *ngIf="isLoading">
   <div class="spinner-border" role="status">
     <span class="visually-hidden">Loading...</span>
   </div>
 </div>
 
-  <div class="container-fluid mt-4" *ngIf="!isLoading">
-    <table class="table table-striped table-hover text-center w-100">
-      <thead class="table">
-        <tr>
-          <th scope="col">Id</th>
-          <th scope="col">Nombre</th>
-          <th scope="col">Descripción</th>
-          <th scope="col">Precio</th>
-          <th scope="col">Stock</th>
-          <th scope="col">Categoría</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let pd of VectorProduct">
-          <th scope="row">{{pd.idProducto}}</th>
-          <td>{{pd.nombre}}</td>
-          <td>{{pd.descripcion}}</td>
-          <td>{{ pd.precio | number:'1.0-0' }}</td>
-          <td>{{pd.stock}}</td>
-          <td>{{pd.categoria}}</td>
-          <td>
-            <button class="btn btn-warning me-1" data-bs-toggle="modal" data-bs-target="#modalproduct" (click)="EditarProducto(pd)">Editar</button>
-            <button class="btn btn-danger" (click)="EliminarProducto(pd)">Eliminar</button>
-          </td>
-            </tr>
-            </tbody>
-         </table>
-        </div>
-    </body>
-</html>
-
+<!-- Tabla de productos -->
+<div class="container-fluid mt-4" *ngIf="!isLoading">
+  <table class="table table-striped table-hover text-center w-100">
+    <thead class="table">
+      <tr>
+        <th scope="col">Id</th>
+        <th scope="col">Nombre</th>
+        <th scope="col">Descripción</th>
+        <th scope="col">Precio</th>
+        <th scope="col">Stock</th>
+        <th scope="col">Categoría</th>
+        <th scope="col">Acciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let pd of VectorProduct">
+        <th scope="row">{{ pd.idProducto }}</th>
+        <td>{{ pd.nombre }}</td>
+        <td>{{ pd.descripcion }}</td>
+        <td>{{ pd.precio | number:'1.0-0' }}</td>
+        <td>{{ pd.stock }}</td>
+        <td>{{ pd.categoria }}</td>
+        <td>
+          <button class="btn btn-warning me-1" data-bs-toggle="modal" data-bs-target="#modalproduct" (click)="EditarProducto(pd)">Editar</button>
+          <button class="btn btn-danger" (click)="EliminarProducto(pd)">Eliminar</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
 <!-- Modal -->
 <div class="modal fade" id="modalproduct" #modalproduct data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalproduct" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="modalproduct">{{isNew?'Nuevo':'Editar'}} Producto {{this.productoSeleccionado?.nombre}}</h1>
+        <h1 class="modal-title fs-5" id="modalproduct">{{ isNew ? 'Nuevo' : 'Editar' }} Producto {{ productoSeleccionado?.nombre }}</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -101,3 +102,4 @@
     </div>
   </div>
 </div>
+
